Add authorized task queue and task events
